--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "editor.tabSize": 4,
-  "editor.autoIndent": false,
+"editor.autoIndent": false,
+"python.pythonPath": "${workspaceFolder}/venv/bin/python",
 }
