--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
   "editor.tabSize": 4,
-"editor.autoIndent": false,
-"python.pythonPath": "${workspaceFolder}/venv/bin/python",
+  "editor.autoIndent": false,
+  "python.pythonPath": "${workspaceFolder}/venv/bin/python",
+  "python.unitTest.promptToConfigure": false,
+  "python.unitTest.pyTestEnabled": false,
+  "python.unitTest.unittestEnabled": false,
+  "python.unitTest.nosetestsEnabled": false,
 }
