--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,8 @@ warn_unused_configs = True
 [mypy-*.migrations.*]
 # Django migrations should not produce any errors:
 ignore_errors = True
+
+[yapf]
+based_on_style = google
+column_limit = 88
+SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET = True
