--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: django-production
+  name: django-demo
 data:
   secret_key: amlscno1NDg0YmltKXZhaWoyMW0tdHB1emUteGI3diMyZHorMHRAOG45aHl0IThjMGQK
-  redis_host:
+  redis_host: MTAuMC4wLjMK
   redis_port: NjM3OQo=
-  db_username:
-  db_password:
-  db_database:
+  db_username: a3ViZXJuZXRlcwo=
+  db_password: S1M1anRRVlU1RndZaldoCg==
+  db_database: ZGVtbwo=
