--- a/k8s/django.yaml
+++ b/k8s/django.yaml
@@ -1,3 +1,18 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: demo-chat
+  labels:
+    app: demo-chat
+spec:
+  type: NodePort
+  selector:
+    app: demo-chat
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,6 +33,12 @@ spec:
         - name: django
           image: eu.gcr.io/meetup-demo-219112/django:latest
           imagePullPolicy: Always
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 5000
+            initialDelaySeconds: 5
+            periodSeconds: 3
           ports:
             - containerPort: 5000
           env:
