--- a/Pipfile
+++ b/Pipfile
@@ -14,21 +14,22 @@ pyjwt = "*"
 graphene = "*"
 graphene-django = "*"
 pip = "==18.0"
+"psycopg2-binary" = "*"
 
 [dev-packages]
 pylint = "*"
 pylint-common = "*"
 pylint-django = "*"
-pytest = "*"
+pytest = "~=3.10.0"
 pytest-sugar = "*"
 pytest-django = "*"
 pytest-asyncio = "*"
 coverage = "*"
 django-coverage-plugin = "*"
-"flake8" = "*"
 isort = "*"
 yapf = "*"
 black = "*"
+"flake8" = "~=3.6.0"
 
 [requires]
 python_version = "3.7"
