--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = config.settings.test
-python_files = **/tests/*.py
+python_files = **/tests_*.py
 testpaths = apps
