--- a/Pipfile
+++ b/Pipfile
@@ -4,16 +4,28 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = {version = ">=2.0.0", extras = ["argon2"]}
-channels = ">=2.0.0"
-pillow = "*"
-django-environ = "*"
-django-cors-headers = "*"
-channels-redis = "*"
-pyjwt = "*"
-graphene = "*"
-graphene-django = "*"
+channels = "==2.1.5"
+django-environ = "==0.4.5"
+django-cors-headers = "==2.4.0"
+graphene = "==2.1.3"
+graphene-django = "==2.2.0"
 pip = "==18.0"
+mypy = "==0.641"
+pylint = "==2.1.1"
+pylint-common = "==0.2.5"
+pylint-django = "==2.0.2"
+pytest = "==3.10.0"
+pytest-django = "==3.4.3"
+pytest-asyncio = "==0.9.0"
+coverage = "==4.5.1"
+"flake8" = "==3.6.0"
+isort = "==4.3.4"
+black = "==18.9b0"
+Django = {version = "==2.1.3", extras = ["argon2"]}
+Pillow = "==5.3.0"
+channels_redis = "==2.3.1"
+PyJWT = "==1.6.4"
+django_coverage_plugin = "==1.6.0"
 
 [dev-packages]
 pylint = "*"
@@ -23,11 +35,11 @@ pytest = "~=3.10.0"
 pytest-django = "*"
 pytest-asyncio = "*"
 coverage = "*"
-django-coverage-plugin = "*"
 isort = "*"
 yapf = "*"
 black = "*"
 "flake8" = "~=3.6.0"
+django_coverage_plugin = "*"
 
 [requires]
 python_version = "3.7"
